# Nova

./: .gitignore  CMakeLists.txt  README.md
cmake/: RunCodegenTest.cmake  RunLexerTest.cmake  RunNovaCodegenToolTest.cmake  RunNovaToolNegativeTest.cmake  RunNovaToolTest.cmake  RunTextCompareTest.cmake
docs/: Nova_Phase1_Prototype_Plan.md  Nova_Phase2_Self_Hosting_Plan.md  README.md  architecture.md  bootstrap.md  limitations.md  testing.md
docs/assignments/: ERRATA.md  Nova_Step10_Nova_Tokenizer_Library_Assignment.md  Nova_Step11_Nova_Parser_Prototype_Assignment.md  Nova_Step12_Enums_Assignment.md  Nova_Step13_Tools_Enum_ParseTree_Assignment.md  Nova_Step14_Nova_Declaration_Checker_Assignment.md  Nova_Step15_Expression_Parser_Assignment.md  Nova_Step16_Expression_Type_Checker_Assignment.md  Nova_Step17_Frontend_Integration_Assignment.md  Nova_Step18_Import_And_Library_Split_Assignment.md  Nova_Step19_Tiny_C_Codegen_Prototype_Assignment.md  Nova_Step1_Assignment.md  Nova_Step20_Bootstrap_Milestone_Cleanup_Assignment.md  Nova_Step21_Self_Hosting_Codegen_Parity_I_Assignment.md  Nova_Step22_Self_Hosting_Codegen_Parity_II_Assignment.md  Nova_Step2_Lexer_Assignment.md  Nova_Step3_Parser_Assignment.md  Nova_Step4_Semantic_Analysis_Assignment.md  Nova_Step5_C_Codegen_Assignment.md  Nova_Step6_Runtime_Core_Assignment.md  Nova_Step7_Nova_Lexer_Tool_Assignment.md  Nova_Step8_Structs_Assignment.md  Nova_Step9_Typed_Vector_Assignment.md  README.md
examples/negative/: assign_undefined_variable.nv  duplicate_name_same_scope.nv  invalid_condition.nv  lack_semicolon.nv  read_undefined_variable.nv  return_type_mismatch.nv  unclosed_str.nv  unmatched_parameter_number.nv
examples/positive/: conditions.nv  expressions.nv  functions.nv  helloworld.nv  loops.nv  recursion.nv  variables.nv
include/: ast.h  ast_dump.h  ast_visitor.h  codegen_c.h  lexer.h  parser.h  sema.h  source_loader.h  token.h
lib/: checker.nv  codegen_c.nv  diagnostics.nv  parse_tree.nv  parser.nv  source_loader.nv  token.nv  tokenizer.nv
runtime/: nova_runtime.c  nova_runtime.h
scripts/: bootstrap_stage1.sh
src/: codegen_c.cpp  lexer.cpp  nova_compile.cpp  nova_lex.cpp  nova_parse.cpp  nova_sema.cpp  parser.cpp  sema.cpp  source_loader.cpp  token.cpp
tests/codegen/positive/: arithmetic.nv  buffer_builder.nv  buffer_builder.out  buffer_two_buffers.nv  enum_basic.nv  enum_struct_field.nv  enum_vec.nv  enum_vec.out  file_roundtrip.nv  function_call.nv  int_to_str_and_concat.nv  loop.nv  nested_block_shadowing.nv  str_vec_basic.nv  str_vec_basic.out  str_vec_empty_len.nv  str_vec_two_vectors.nv  str_vec_two_vectors.out  str_vec_with_buffer.nv  string_concat.nv  string_len_get.nv  string_len_get.out  string_predicates.nv  string_predicates.out  string_slice.nv  struct_assignment.nv  struct_basic.nv  struct_field_order.nv  struct_function_return.nv  struct_function_return.out  struct_nested.nv  vec_function_param.nv  vec_function_return.nv  vec_int_basic.nv  vec_of_str.nv  vec_of_str.out  vec_struct_token.nv  vec_struct_token.out
tests/lexer/negative/: dangling_escape_in_string.err  invalid_char.err  invalid_number_alpha.err  invalid_number_underscore.err  invalid_number_underscore.nv  single_ampersand.err  single_pipe.err  unclosed_block_comment.err
tests/lexer/positive/: comments_and_whitespace.nv  comments_and_whitespace.out  keywords_and_identifiers.nv  keywords_and_identifiers.out  numbers.nv  numbers.out  single_tokens.nv  single_tokens.out  strings.nv  strings.out  tiny_program.out
tests/parser/negative/: incomplete_binary_expr.err  incomplete_binary_expr.nv  invalid_return_expr.err  invalid_return_expr.nv  malformed_call_args.err  malformed_call_args.nv  missing_colon_before_type.err  missing_colon_before_type.nv  missing_rbrace.err  missing_rparen.err  missing_rparen.nv  missing_semicolon.err  missing_type_in_let.err  missing_type_in_let.nv
tests/parser/positive/: assignment_right_assoc.nv  assignment_right_assoc.out  function_call_and_forward_decl.nv  function_call_and_forward_decl.out  if_else.nv  if_else.out  let_and_return.nv  let_and_return.out  minimal_function.out  nested_blocks.nv  nested_blocks.out  precedence.nv  precedence.out  while_loop.nv  while_loop.out
tests/sema/negative/: access_field_on_non_struct.err  access_field_on_non_struct.nv  assignment_type_mismatch.err  assignment_type_mismatch.nv  call_unknown_function.err  call_unknown_function.nv  duplicate_enum.err  duplicate_enum.nv  duplicate_enum_member.err  duplicate_enum_member.nv  duplicate_function.err  duplicate_function.nv  duplicate_parameter_name.err  duplicate_parameter_name.nv  duplicate_struct.err  duplicate_struct.nv  duplicate_struct_field.err  duplicate_struct_literal_field.err  duplicate_struct_literal_field.nv  duplicate_variable_same_scope.err  duplicate_variable_same_scope.nv  empty_return_in_non_void_function.err  empty_return_in_non_void_function.nv  enum_member_on_unknown_enum.err  enum_member_on_unknown_enum.nv  enum_type_mismatch.err  enum_type_mismatch.nv  field_type_mismatch.err  field_type_mismatch.nv  function_argument_count_mismatch.err  function_argument_count_mismatch.nv  function_argument_type_mismatch.err  function_argument_type_mismatch.nv  if_condition_not_bool.err  invalid_assignment_target.err  invalid_assignment_target.nv  missing_return_in_non_void_function.err  missing_return_in_non_void_function.nv  missing_struct_field.err  missing_struct_field.nv  (+30 more)
tests/sema/positive/: all_paths_return.nv  basic_program.nv  function_call.nv  function_call.out  recursion.nv  shadowing.nv  string_runtime.nv
tests/tools/codegen/: arithmetic.nv  bool_logic.nv  buffer_builder.nv  buffer_builder.out  enum_basic.nv  enum_basic.out  enum_function_param.nv  function_call.nv  hello.nv  if_else.nv  int_to_str_concat.nv  recursion.nv  string_concat.nv  string_len_get.nv  string_plus.nv  struct_assignment.nv  (+17 more)
tools/: nova_checker.nv  nova_codegen.nv  nova_expr_parser.nv  nova_frontend.nv  nova_lexer.nv  nova_parser.nv  nova_tokenizer.nv
tools/vscode-nova-syntax/: language-configuration.json  package.json  test.nv
(+145 files in other folders)
